--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "frontend:install": "cd udagram-frontend && npm install",
         "backend:install": "cd udagram-api && npm install",
-        "frontend:build": "cd udagram-frontend && npm run build",
+        "frontend:build": "cd udagram-frontend && npm run build:prod",
         "backend:build": "cd udagram-api && npm run build",
         "backend:deploy": "cd udagram-api && npm run deploy",
         "frontend:deploy": "cd udagram-frontend && npm run deploy"
