--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -14,7 +14,7 @@
     "clean": "rm -rf www/ || true",
     "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "eb deploy udagram-api-dev"
+    "deploy": "eb init --profile default && eb deploy"
   },
   "keywords": [],
   "author": "Gabriel Ruttner",
