--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
         "backend:install": "cd udagram-api && npm install",
         "frontend:build": "cd udagram-frontend && npm run build:prod",
         "backend:build": "cd udagram-api && npm run build",
-        "backend:deploy": "cd udagram-api && npm run deploy",
-        "frontend:deploy": "cd udagram-frontend && npm run deploy"
+        "frontend:deploy": "cd udagram-frontend && npm run deploy",
+        "backend:deploy": "cd udagram-api && npm run deploy"
     },
     "devDependencies": {}
 }
