--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ orbs:
   node: circleci/node@5.0.0
   aws-cli: circleci/aws-cli@1.3.1
   eb: circleci/aws-elastic-beanstalk@2.0.1
+  browser: circleci/browser-tools@1.2.4
   # different jobs are calles later in the workflows sections
 jobs:
   build:
