--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,8 @@ jobs:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/base:stable"
+        environment:
+          CHROME_BIN: /usr/bin/google-chrome
     steps:
       - node/install:
         node-version: "14.17.5"
