--- a/udagram-api/package.json
+++ b/udagram-api/package.json
@@ -14,7 +14,7 @@
     "clean": "rm -rf www/ || true",
     "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "eb use udagram-api-dev && eb deploy udagram-api-dev && eb setenv AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY AWS_BUCKET=$AWS_BUCKET AWS_REGION=$AWS_DEFAULT_REGION POSTGRES_DB=$POSTGRES_DB JWT_SECRET=$JWT_SECRET PORT=$PORT POSTGRES_USERNAME=$POSTGRES_USERNAME POSTGRES_PASSWORD=POSTGRES_PASSWORD DB_PORT=$DB_PORT POSTGRES_HOST=$POSTGRES_HOST --profile eb-cli"
+    "deploy": "eb use udagram-api-dev && eb deploy udagram-api-dev && eb setenv AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY AWS_BUCKET=$AWS_BUCKET AWS_REGION=$AWS_DEFAULT_REGION POSTGRES_DB=$POSTGRES_DB JWT_SECRET=$JWT_SECRET PORT=$PORT POSTGRES_USERNAME=$POSTGRES_USERNAME POSTGRES_PASSWORD=POSTGRES_PASSWORD DB_PORT=$DB_PORT POSTGRES_HOST=$POSTGRES_HOST profile=$profile"
   },
   "keywords": [],
   "author": "Gabriel Ruttner",
